2013-11-02  Niibe Yutaka  <gniibe@fsij.org>

	* src/sys.c: Update from Chopstx.
	* src/usb_lld.h: Remove interrupt definition.
	* src/stm32f103.h: Add AFIO, EXTI, and TIMER constants.

2013-10-31  Niibe Yutaka  <gniibe@fsij.org>

	* src/main.c (main): Call msc_init before USB interrupt thread.
	* src/gnuk.h, src/usb-msc.h, src/usb-msc.c, src/pin-dnd.c: Port to
	Chipstx.
	* src/openpgp.c (get_pinpad_input): Follow the change.
	* src/usb_ctrl.c (gnuk_setup_endpoints_for_interface): Don't stall
	RX of ENDP6.

2013-10-24  Niibe Yutaka  <gniibe@fsij.org>

	* src/Makefile.in (DEFS): Add -DCHX_PRIO_MAIN=5 for LED blink.
	* src/main.c (PRIO_CCID): It's now 3 (was: 2).

2013-10-24  Niibe Yutaka  <gniibe@fsij.org>

	* src/gnuk.ld.in (.gnuk_flash): Three pages for three keys.
	* src/flash.c (FLASH_KEYSTORE_SIZE): Likewise.
	(flash_keystore_release): Remove.
	(flash_key_fill_zero_as_released)
	(flash_check_all_other_keys_released, flash_key_release): New.
	(flash_init, flash_key_alloc): New method to handle free space.
	* src/openpgp-do.c (fetch_four_bytes): New.
	(gpg_do_load_prvkey, gpg_do_delete_prvkey, gpg_do_public_key): Use
	fetch_four_bytes.
	(gpg_do_delete_prvkey): Call flash_key_release.

2013-10-23  Niibe Yutaka  <gniibe@fsij.org>

	* test/features/010_setup_passphrase.feature
	* test/features/030_key_registration.feature
	* test/features/040_passphrase_change.feature
	* test/features/410_setup_passphrase.feature
	* test/features/430_key_registration.feature
	* test/features/201_keygen.feature
	* test/features/601_keygen.feature: Modified to support new way of
	pass phrase reset by key import / key generation.

	* test/features/201_keygen.feature
	* test/features/601_keygen.feature
	* test/features/202_setup_passphrase.feature
	* test/features/602_setup_passphrase.feature: Rename to change
	order of execution.

2013-10-23  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (gpg_do_write_prvkey): Bug fix of adding
	num_prv_keys.
