@@ -1215,10 +1215,24 @@ process_command_apdu (void)
     }
 }
 
-void *
-GPGthread (void *arg)
+static void * card_thread (chopstx_t thd, struct eventflag *ccid_comm);
+
+void * __attribute__ ((naked))
+openpgp_card_thread (void *arg)
 {
-  struct eventflag *ccid_comm = (struct eventflag *)arg;
+  chopstx_t thd;
+
+  asm ("mov	%0, sp" : "=r" (thd));
+  return card_thread (thd, (struct eventflag *)arg);
+}
+
+chopstx_t openpgp_card_thd;
+
+static void *
+card_thread (chopstx_t thd, struct eventflag *ccid_comm)
+{
+  openpgp_card_thd = thd;
+
   openpgp_comm = ccid_comm + 1;
 
   gpg_init ();
